--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^16.12.0",
     "react-modal-video": "^1.2.6",
+    "react-owl-carousel": "^2.3.1",
     "react-popper": "^1.3.7",
     "react-scripts": "3.3.1",
     "react-scrollspy": "^3.4.2"
